fixed text wrapping

--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,10 @@ img {
   height: auto;
 }
 
+header {
+    white-space: nowrap;
+}
+
 /*  */
 :root {
   --red: #d33a2c;
